fix: Horizontal scrollbar appears with animation
This happens because the element is off screen when animation plays

--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,7 @@ body {
   font-family: "Roboto", sans-serif;
   width: 90%;
   margin: auto;
+  overflow-x: hidden;
 }
 
 h1,
